# CppQtCmakeProjectTempLate

./: .gitignore  CMakeLists.txt  LICENSE  Listen.txt  MainView.cpp  MainView.h  MainView.ui  README.md  main.cpp  main.h
cmake/: DeployQt.cmake
